Fixed issue with not centered 100%

--- a/src/components/ProgressCircle.css
+++ b/src/components/ProgressCircle.css
@@ -5,20 +5,18 @@
   border-radius: 50%;
   background: rgba(29, 29, 29, 0.8);
   /*text-shadow: 1px 1px 4px #000;*/
-  /*position: relative;*/
-  /*position: relative;*/
+  position: absolute;
   padding: 10px;
   margin: auto;
-  top: 0;
-  left: 0;
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index: 5;
 }
 
-.ProgressCircleTxt{
+/*.ProgressCircleTxt{*/
 
-}
+/*}*/
 /*
 .mainBttn {
   font-family: HelveticaNeueLT-BlackCond, 'Oswald', sans-serif;
